--- a/osm_style/inc/datasource-settings.xml.inc.template
+++ b/osm_style/inc/datasource-settings.xml.inc.template
@@ -5,11 +5,11 @@ Note: feel free to leave password, host, port, or use blank
 -->
 
 <Parameter name="type">postgis</Parameter>
-<Parameter name="password">1234</Parameter>
+<Parameter name="password">$THE_SECRET_PSWRD</Parameter>
 <Parameter name="host">localhost</Parameter>
 <Parameter name="port"></Parameter>
 <Parameter name="user">maxime</Parameter>
-<Parameter name="dbname">dev_gis</Parameter>
+<Parameter name="dbname">$THE_DATABASE_NAME</Parameter>
 <!-- this should be 'false' if you are manually providing the 'extent' -->
 <Parameter name="estimate_extent">false</Parameter>
 <!-- manually provided extent in epsg 900913 for whole globe -->
